--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>TAME/E</title>
+    <title>Macrometer</title>
     <base href="/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -26,6 +26,7 @@
     <div class="container">
       <header></header>
       <main></main>
+      <proto></proto>
     </div>
   </body>
 </html>
