--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="node_modules/handsontable/dist/handsontable.full.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/triangle.css">
 
     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
